--- a/abcCompany.html
+++ b/abcCompany.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
 	 crossorigin="anonymous">
-	<link rel="stylesheet" href="./css/index.css" />
+	<link rel="stylesheet" href="./index.css" />
 </head>
 <body>
   <header>
@@ -23,7 +23,7 @@
 			<li>Help</li>
 		</ul>
 	</nav>
-	<main>
+	<main class= "main">
     <section class="product">
 		 <i class="fas fa-apple-alt fa-5x"></i>
 			<h2>A as in Apple</h2>
